# Unsupervised-Elicitation

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
docs/: mjc_research_journal.md  original_ICM.py  paper.md  paper.tex
nbs/: 02_analyse_dd_res.py  02_analyse_tqa_res.py  03_eval_tqa.py  04_REVIEW.md  04_test_evidence_weighting.py  05_backprop.py  simple_icm.py  temp_upload_tqav2.py
src/: simple_icm.py
src/data/: __init__.py  daily_dilemma.py  daily_dilemmas.py  truthfulqa.py
src/experiments/: ICM.py  log_truthfulQA-llama70b-K3000-bc256_seed27565976-initialsize8-weighted50.0-decay0.99-initialT10-finalT0.01-schedulerlog.jsonl
src/llm_api/: base_llm.py  llm.py  openai_llm.py
