[project]
name = "unsupervised-elicitation-wassname"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "wassname", email = "1103714+wassname@users.noreply.github.com" }
]
requires-python = ">=3.10"
dependencies = [
    "adjusttext>=1.3.0",
    "alembic>=1.16.5",
    "altair>=5.5.0",
    "anthropic>=0.69.0",
    "anycache>=2.4.0",
    "cattrs>=25.2.0",
    "datasets>=4.1.1",
    "fastapi==0.100.0",
    "fire>=0.7.1",
    "hydra-core>=1.3.2",
    "loguru>=0.7.3",
    "matplotlib>=3.10.6",
    "mistralai>=1.9.10",
    "openai==0.28.0",
    "openrouter-wrapper",
    "pandas>=2.3.3",
    "pebble>=5.1.3",
    "polars>=1.33.1",
    "pre-commit>=4.3.0",
    "pydantic>=2.11.9",
    "replicate>=1.0.7",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "sqlalchemy==2.0.18",
    "tabulate>=0.9.0",
    "tenacity>=9.1.2",
    "termcolor>=3.1.0",
    "tiktoken>=0.11.0",
    "tqdm>=4.67.1",
    "trueskill>=0.4.5",
    "typer[all]>=0.19.2",
    "uvicorn[standard]==0.22.0",
    "wandb>=0.22.1",
]

[project.scripts]
unsupervised-elicitation = "unsupervised_elicitation:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.uv.sources]
openrouter-wrapper = { path = "../llm_moral_lb_v2/openrouter_wrapper", editable = true }

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
]
